	to reduce likelihood of corruption
+ long overdue additions to docfile.txt
+ nfs polynomial selection is now performed in parallel
	+ added a number of options to tailor parallel poly selection - see docfile.txt
+ automated nfs jobs now only invoke filtering after a minimum number of relations
	have been collected
+ added a simple abort handler to NFS


v 1.25
+ improved smallmpqs quite a bit
+ simplified the process of checking small-prime-variation primes for inclusion
	on a sieve progression
+ experimentation with different versions of the sieve of eratosthenes.  no impact
	to in-use code at this point.
+ much more efficient threading architecture in SIQS.  30-40% speedup in many cases for 
	multi-threaded factorizations.  Architecture and code for linux platforms 
	contributed by Ben Chaffin.
+ got rid of a couple stray debugging messages.

v 1.24 2/9/11
+ added proprocessing check for enabled profiling which disables poly.c ASM code.  profiling
	doesn't work if all of the registers are in the clobber list.
+ rearranged sieve scanning in check_relations slightly so that a list of reports are 
	generated first, then all reports are sequencially examined.
+ fixed the reporting of how many total polynomials were used
+ implemented a re-sieving algorithm for factor base primes between 8192 up to the med_B bound.  
	makes use of SSE2 instructions for multi-up re-sieving.  This change applies to x64 and
	linux64 builds only for now.
+ (Brian Gladman) contributed assembler files to support 64 bit mod operations in x64.
+ changes to the preprocessor definition structure in many places to make the project 
	mingw64 friendly
+ actually make use of the PRIu/d/x64 definitions now
+ uncomment stuff in fp_montgomery_reduce.c which was protected by #ifdef's anyway
+ shared memory and fork not available in mingw after all - adjust preprocessor directives
	accordingly
+ makefile needed to be adjusted to get ecm/gmp to link in mingw